test(evals): update experiment 055-java-spring-controller results
Update and add evaluation results for Java Spring Controller artifact generation. Includes metrics and outputs for baseline and AAP protocol variants across multiple edit turns.